--- a/css/scss/layout/_content.scss
+++ b/css/scss/layout/_content.scss
@@ -1,15 +1,16 @@
 @charset "utf-8";
 * {
   box-sizing: border-box;
-  button {
+  button,
+  input {
     outline: none;
   }
 }
-section {
-}
+
 .btn {
-  padding-top: 15px;
-  float: left;
+  position: absolute;
+  top: 27px;
+  left: 0;
   .back {
     width: 32px;
     height: 32px;
@@ -19,8 +20,9 @@ section {
   }
 }
 .content {
-  outline: 2px solid red;
   .title {
+    padding-left: 55px;
+    border-bottom: 1px solid $color-lightgray;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -32,9 +34,14 @@ section {
     font-size: 14px;
     line-height: 24px;
   }
-  h2 {
-    padding: 24.5px 0 24.5px 25px;
+  .title-in {
+    margin: 24.5px 0 24.5px 0px;
+    width: 700px;
+    height: 40px;
     font-size: 16px;
+    border: 1px solid $color-6-border;
+    display: flex;
+    align-items: center;
   }
 }
 
@@ -65,20 +72,79 @@ section {
 }
 .app {
   box-sizing: border-box;
-  padding: 0 30px 0 55px;
+  padding-left: 55px;
 }
 .app-tit {
   font-weight: 500;
   padding-top: 33.5px;
+  padding-left: 10px;
   line-height: 30px;
 }
 .app-in {
   font-weight: 300;
   line-height: 30px;
   padding: 11.1px 0 29.9px 0;
+  border: 1px solid $color-6-border;
 }
-.app-image {
+
+.entire {
+  width: calc(100%-55px);
+  padding-top: 9px;
+  padding-left: 55px;
+}
+.entire2 {
+  width: calc(100%-55px);
+  padding-top: 7px;
+  padding-left: 55px;
+}
+.info {
+  .info-name {
+    padding: 20px 0;
+  }
+  input {
+    width: 320px;
+    height: 39px;
+    padding: 0 10px;
+  }
+  .info-in {
+    display: flex;
+    align-items: center;
+    span {
+      display: inline-block;
+      width: 24px;
+      height: 24px;
+    }
+    img {
+      width: 100%;
+    }
+  }
+  .small-btn {
+    border: 1px solid $color-6-border;
+    border-radius: 100px;
+    width: 70px;
+    height: 24px;
+    margin-left: 20px;
+  }
+}
+.history {
+  width: calc(100%-55px);
+  padding-left: 55px;
+}
+.history-title {
+  line-height: 30px;
+  padding: 70px 0 15px 10px;
+}
+.history-table {
   width: 100%;
-  height: 680px;
-  background-color: $color-lightgray;
+  border-collapse: collapse;
+  tr,
+  td,
+  th {
+    height: 48px;
+    text-align: center;
+    vertical-align: middle;
+  }
+  th {
+    background-color: $color-lightgray;
+  }
 }
