--- a/css/scss/layout/_content.scss
+++ b/css/scss/layout/_content.scss
@@ -20,9 +20,17 @@
   }
 }
 .content {
+  .title-wrong {
+    border-bottom: 1px solid $color-lightgray;
+    .wrong {
+      color: $color-greenblue;
+      font-size: 12px;
+      margin-left: 55px;
+      padding: 10px 0;
+    }
+  }
   .title {
     padding-left: 55px;
-    border-bottom: 1px solid $color-lightgray;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -35,7 +43,7 @@
     line-height: 24px;
   }
   .title-in {
-    margin: 24.5px 0 24.5px 0px;
+    margin: 24.5px 0 0 0px;
     width: 700px;
     height: 40px;
     font-size: 16px;
@@ -96,6 +104,11 @@
   width: calc(100%-55px);
   padding-top: 7px;
   padding-left: 55px;
+  .wrong {
+    color: $color-greenblue;
+    font-size: 12px;
+    padding: 10px 0;
+  }
 }
 .info {
   .info-name {
@@ -143,8 +156,20 @@
     height: 48px;
     text-align: center;
     vertical-align: middle;
+    font-size: 13px;
+    letter-spacing: -0.5px;
+  }
+  th:first-child {
+    width: 100px;
+  }
+  th:nth-child(2) {
+    width: 180px;
+  }
+  th:last-child {
   }
   th {
     background-color: $color-lightgray;
+    font-weight: 500;
+    color: $color-table;
   }
 }
