--- a/css/scss/layout/_content.scss
+++ b/css/scss/layout/_content.scss
@@ -9,7 +9,7 @@
 
 .btn {
   position: absolute;
-  top: 27px;
+  top: 35px;
   left: 0;
   .back {
     width: 32px;
@@ -20,14 +20,13 @@
   }
 }
 .content {
+  .dapp-name {
+    line-height: 30px;
+    padding-left: 55px;
+  }
   .title-wrong {
     border-bottom: 1px solid $color-lightgray;
-    .wrong {
-      color: $color-greenblue;
-      font-size: 12px;
-      margin-left: 55px;
-      padding: 10px 0;
-    }
+    padding-bottom: 14.5px;
   }
   .title {
     padding-left: 55px;
@@ -43,7 +42,6 @@
     line-height: 24px;
   }
   .title-in {
-    margin: 24.5px 0 0 0px;
     width: 700px;
     height: 40px;
     font-size: 16px;
@@ -53,31 +51,6 @@
   }
 }
 
-.information {
-  border-top: 1px solid #f2f3f7;
-  border-bottom: 1px solid #f2f3f7;
-  padding: 19.5px 0 19.5px 25px;
-  display: flex;
-  flex-grow: 1;
-  align-items: center;
-  span {
-    display: flex;
-    flex-grow: 1;
-    color: #3b5675;
-    font-size: 13px;
-    border-right: 1px solid $color-lightgray;
-    padding-left: 27px;
-    align-items: center;
-  }
-  .small-btn {
-    border-radius: 100px;
-    display: inline-block;
-    border: 1px solid #c6cbd4;
-    line-height: 24px;
-    padding: 0 14px;
-    margin-left: 5px;
-  }
-}
 .app {
   box-sizing: border-box;
   padding-left: 55px;
@@ -92,6 +65,7 @@
   font-weight: 300;
   line-height: 30px;
   padding: 11.1px 0 29.9px 0;
+  height: 260px;
   border: 1px solid $color-6-border;
 }
 
@@ -104,15 +78,11 @@
   width: calc(100%-55px);
   padding-top: 7px;
   padding-left: 55px;
-  .wrong {
-    color: $color-greenblue;
-    font-size: 12px;
-    padding: 10px 0;
-  }
 }
 .info {
   .info-name {
     padding: 20px 0;
+    font-size: 13px;
   }
   input {
     width: 320px;
@@ -136,7 +106,7 @@
     border-radius: 100px;
     width: 70px;
     height: 24px;
-    margin-left: 20px;
+    margin-left: 10px;
   }
 }
 .history {
