--- a/css/scss/style.scss
+++ b/css/scss/style.scss
@@ -19,4 +19,8 @@
 @import "layout/footer";
 @import "layout/header";
 @import "layout/menu";
-@import "layout/content";
+@import "layout/content05";
+@import "layout/content06";
+@import "layout/content07";
+@import "layout/content08";
+@import "layout/voting03";
