--- a/css/scss/base/_font.scss
+++ b/css/scss/base/_font.scss
@@ -4,3 +4,5 @@ $color-lightgray: #f2f3f7;
 $color-6-border: #c6cbd4;
 $color-greenblue: #11adca;
 $color-table: #575757;
+$color-end: #98a6b6;
+$color-vote-table: #c6cbd4;
