--- a/css/scss/base/_font.scss
+++ b/css/scss/base/_font.scss
@@ -8,3 +8,4 @@ $color-end: #98a6b6;
 $color-vote-table: #c6cbd4;
 $color-login-bottom: #17365b;
 $color-placeholder: #8592a2;
+$color-red-wrong: #ee6262;
