--- a/css/scss/layout/_login01.scss
+++ b/css/scss/layout/_login01.scss
@@ -4,9 +4,10 @@ body {
 }
 .header {
   position: absolute;
-  top: 40px;
-  right: 40px;
+  top: 30px;
+  right: 30px;
   font-size: 14px;
+  color: #333;
   a:first-child {
     border-right: 1px solid #d8d8d8;
     padding-right: 17px;
@@ -31,6 +32,7 @@ body {
   }
 }
 .logo {
+  margin-top: 50px;
   display: inline-block;
   width: 145px;
   height: 210px;
@@ -40,6 +42,7 @@ body {
 }
 .login-form {
   text-align: center;
+  margin-top: 40px;
   .login-in {
     display: inline-block;
     width: 360px;
@@ -55,6 +58,7 @@ body {
     padding: 20px 0 15px 0;
     letter-spacing: -0.6px;
     font-weight: 500;
+    color: #323b45;
   }
   .typing {
     width: 360px;
@@ -63,6 +67,7 @@ body {
     background-color: rgba(168, 182, 200, 0.15);
     padding: 0 10px;
     border: 0;
+    font-size: 16px;
   }
   .typing::placeholder {
     color: $color-placeholder;
@@ -76,8 +81,12 @@ body {
     background-color: rgba(168, 182, 200, 0.15);
     padding: 0 10px;
     border: 0;
-    font-size: 14px;
+    font-size: 16px;
     color: $color-placeholder;
+    .type-click {
+      display: inline-block;
+      margin-left: 190px;
+    }
   }
   .press-btn button {
     width: 360px;
@@ -92,5 +101,31 @@ body {
     padding-top: 60px;
     font-size: 14px;
     color: $color-login-bottom;
+    margin-bottom: 50px;
+  }
+}
+//제이쿼리
+.school {
+  position: relative;
+  display: none;
+}
+.school-select {
+  width: 360px;
+  height: 120px;
+  border-radius: 4px;
+  box-shadow: 0 2px 8px 0 rgba(0, 0, 0, 0.16);
+  line-height: 31px;
+  color: #333;
+  background-color: #ffffff;
+  position: absolute;
+  top: 0;
+  left: 0;
+  font-size: 14px;
+  .school-name {
+    width: 360px;
+    height: 30px;
+  }
+  .school-name:nth-child(2) {
+    background-color: #f2f4f7;
   }
 }
