디테일 수정 commit

--- a/css/scss/base/_font.scss
+++ b/css/scss/base/_font.scss
@@ -9,3 +9,4 @@ $color-vote-table: #c6cbd4;
 $color-login-bottom: #17365b;
 $color-placeholder: #8592a2;
 $color-red-wrong: #ee6262;
+$color-btn-hover: #d8e0e7;
