--- a/css/scss/layout/_content07.scss
+++ b/css/scss/layout/_content07.scss
@@ -144,6 +144,7 @@
 .history7 {
   width: calc(100%-55px);
   padding-left: 55px;
+  padding-bottom: 30px;
 }
 .history-title7 {
   line-height: 30px;
@@ -156,13 +157,18 @@
   td,
   th {
     height: 48px;
-    text-align: center;
+    text-align: left;
     vertical-align: middle;
     font-size: 13px;
     letter-spacing: -0.5px;
   }
-  th:first-child {
+  td {
+    border-bottom: 1px solid rgba(198, 203, 212, 0.3);
+  }
+  th:first-child,
+  td:first-child {
     width: 100px;
+    padding-left: 39px;
   }
   th:nth-child(2) {
     width: 180px;
