--- a/css/scss/layout/_login02.scss
+++ b/css/scss/layout/_login02.scss
@@ -29,4 +29,11 @@
   color: white;
   margin-top: 9px;
   font-size: 16px;
+  &:hover {
+    background-color: #11adca;
+  }
+}
+.type-click2 {
+  display: inline-block;
+  margin-left: 190px;
 }
