--- a/css/scss/layout/_content05.scss
+++ b/css/scss/layout/_content05.scss
@@ -3,6 +3,7 @@
   box-sizing: border-box;
   button {
     outline: none;
+    border: 0;
   }
 }
 
@@ -40,7 +41,7 @@
 .information5 {
   border-top: 1px solid #f2f3f7;
   border-bottom: 1px solid #f2f3f7;
-  padding: 19.5px 0 19.5px 25px;
+  padding: 13.5px 0 13.5px 25px;
   display: flex;
   flex-grow: 1;
   align-items: center;
@@ -60,6 +61,10 @@
     line-height: 24px;
     padding: 0 14px;
     margin-left: 5px;
+    &:hover {
+      border: 1px solid $color-vote-table;
+      background-color: $color-lightgray;
+    }
   }
 }
 .app5 {
