--- a/css/scss/layout/_voting03.scss
+++ b/css/scss/layout/_voting03.scss
@@ -10,7 +10,7 @@
   position: relative;
 }
 .btn-v3 {
-  padding-top: 15px;
+  padding-top: 12px;
   float: left;
   .back-v3 {
     width: 32px;
@@ -50,36 +50,63 @@
   display: flex;
   flex-grow: 1;
   align-items: center;
+  padding-left: 41px;
   span {
     display: flex;
-    flex-grow: 1;
     color: #3b5675;
     font-size: 13px;
     border-right: 1px solid $color-lightgray;
-    padding-left: 27px;
+    padding: 0 14px;
     align-items: center;
+    &:last-child {
+      border: 0;
+    }
   }
   .small-btn-v3 {
     border-radius: 100px;
     display: inline-block;
     border: 1px solid #c6cbd4;
-    line-height: 24px;
+    height: 24px;
+    width: 70px;
     padding: 0 14px;
     margin-left: 5px;
+    &:hover {
+      background-color: $color-lightgray;
+    }
   }
 }
 .information2-v3 {
   border-bottom: 1px solid #f2f3f7;
-  padding-left: 25px;
+  padding-left: 55px;
   padding-bottom: 19.5px;
   span {
     color: #3b5675;
     font-size: 13px;
-    padding-left: 27px;
   }
   label {
     font-size: 13px;
     padding: 0 19px 0 0;
+  }
+  .radio {
+    margin-left: 10px;
+  }
+  .radio input[type="radio"] {
+    display: none; /* 실제 라디오버튼 없애기 */
+  }
+  .radio input[type="radio"] + label::before {
+    /* 가짜 라디오버튼 만들기 */
+    content: " ";
+    display: inline-block;
+    width: 19px;
+    height: 19px;
+    vertical-align: middle;
+    margin: -5px 7px 0 0;
+    background: url("../images/btn-radio-selected2.svg");
+  }
+  .radio input[type="radio"]:checked + label::before {
+    /* 가짜 라디오버튼 체크했을 때 */
+    background: url("../images/btn-radio-selected.svg");
+    background-position: 20px 0;
   }
 }
 .vote-v3 {
@@ -114,10 +141,13 @@
     border-radius: 100px;
     display: inline-block;
     border: 1px solid $color-vote-table;
-    line-height: 24px;
+    line-height: 21px;
     font-size: 12px;
     width: 90px;
     height: 24px;
+    &:hover {
+      background-color: $color-lightgray;
+    }
   }
 }
 .library-v3 {
@@ -130,6 +160,7 @@
 .add-image-v3 {
   padding: 40px 0 13px 55px;
   line-height: 30px;
+  font-weight: 500;
   .fake-image-v3 {
     width: 200px;
     height: 117px;
