--- a/css/scss/helpers/_mixin.scss
+++ b/css/scss/helpers/_mixin.scss
@@ -9,3 +9,47 @@ $path: "../images/";
 @mixin small-btn-hover($small-btn) {
   background-color: $color-vote-table;
 }
+
+%radio {
+  //radio
+  input[type="radio"] {
+    display: none; /* 실제 라디오버튼 없애기 */
+  }
+  input[type="radio"] + label::before {
+    /* 가짜 라디오버튼 만들기 */
+    content: " ";
+    display: inline-block;
+    width: 19px;
+    height: 19px;
+    vertical-align: middle;
+    margin: -5px 7px 0 0;
+    background: url("../images/btn-radio-selected2.svg");
+  }
+  input[type="radio"]:checked + label::before {
+    /* 가짜 라디오버튼 체크했을 때 */
+    background: url("../images/btn-radio-selected.svg");
+    background-position: 20px 0;
+  }
+}
+
+%radio2 {
+  //radio
+  input[type="radio"] {
+    display: none; /* 실제 라디오버튼 없애기 */
+  }
+  input[type="radio"] + label::before {
+    /* 가짜 라디오버튼 만들기 */
+    content: " ";
+    display: inline-block;
+    width: 19px;
+    height: 19px;
+    vertical-align: middle;
+    margin: -5px 7px 0 0;
+    background: url("../images/btn-radio-selected3.svg");
+  }
+  input[type="radio"]:checked + label::before {
+    /* 가짜 라디오버튼 체크했을 때 */
+    background: url("../images/btn-radio-selected.svg");
+    background-position: 20px 0;
+  }
+}
