--- a/css/scss/layout/_job02.scss
+++ b/css/scss/layout/_job02.scss
@@ -48,6 +48,7 @@
 .detail-j2 {
   padding-top: 80px;
   font-size: 13px;
+  font-weight: 500;
   h2 {
     line-height: 30px;
     padding-bottom: 13px;
