--- a/css/scss/layout/_job03.scss
+++ b/css/scss/layout/_job03.scss
@@ -40,7 +40,7 @@
   }
   .basic-in-j3 {
     padding: 21px 0 20px 0;
-    border: 2px solid red;
+
     span:first-child {
       padding-right: 21px;
     }
@@ -68,10 +68,9 @@
         display: inline-block;
         width: 24px;
         height: 24px;
-        border: 1px solid red;
         background-image: url("../images/btn-dropdown-arrow-normal.svg");
         position: absolute;
-        top: 0;
+        top: 3px;
         right: 0;
       }
     }
