job2,3과 code2,3 수정 커밋

--- a/css/scss/layout/_code03.scss
+++ b/css/scss/layout/_code03.scss
@@ -90,6 +90,8 @@
     border-radius: 2px;
     border: solid 1px #c6cbd4;
     line-height: 30px;
+    padding: 10px;
+    resize: none;
   }
 }
 .extra-c3 {
@@ -107,6 +109,8 @@
     border-radius: 2px;
     border: solid 1px #c6cbd4;
     line-height: 30px;
+    padding: 10px;
+    resize: none;
   }
 }
 .search-c2 {
