--- a/css/scss/layout/_job03.scss
+++ b/css/scss/layout/_job03.scss
@@ -40,7 +40,6 @@
   }
   .basic-in-j3 {
     padding: 21px 0 20px 0;
-
     span:first-child {
       padding-right: 21px;
     }
@@ -53,16 +52,10 @@
       color: #333;
       font-size: 14px;
       padding: 0 12px;
+      margin-left: 10px;
+      margin-right: 19px;
+      line-height: 32px;
       position: relative;
-      .select-out-j3 {
-        display: table;
-        width: 100px;
-        height: 32px;
-      }
-      .select-in-j3 {
-        display: table-cell;
-        vertical-align: middle;
-      }
       &::after {
         content: "";
         display: inline-block;
@@ -73,6 +66,21 @@
         top: 3px;
         right: 0;
       }
+      .select-box-j3 {
+        position: absolute;
+        top: 32px;
+        left: 0;
+        background-color: white;
+        width: 100%;
+        box-shadow: 0 2px 2px 0 grey;
+        display: none;
+        li {
+          padding-left: 10px;
+        }
+        li:hover {
+          background-color: rgb(242, 244, 247);
+        }
+      }
     }
     input {
       width: 300px;
@@ -80,6 +88,7 @@
       padding: 0 12px;
       font-size: 14px;
       color: #333;
+      margin-left: 11px;
     }
   }
 }
@@ -118,9 +127,9 @@
 }
 .cycle-j3 {
   padding-top: 18px;
-  @extend %radio2;
+  @extend %radio;
   color: black;
-  span {
+  .cycle-in-j3 {
     padding-right: 18px;
   }
   .cycle-text {
@@ -135,6 +144,12 @@
   }
   input {
     padding: 0 12px;
+  }
+  .cycle-in2-j3 {
+    @extend %radio2;
+    label {
+      margin-right: 8px;
+    }
   }
 }
 .log-j3 {
