--- a/css/scss/helpers/_mixin.scss
+++ b/css/scss/helpers/_mixin.scss
@@ -48,3 +48,126 @@ $path: "../images/";
     background: url("../images/btn-radio-selected3.svg");
   }
 }
+
+%radio3 {
+  //radio
+  input[type="radio"] {
+    display: none; /* 실제 라디오버튼 없애기 */
+  }
+  input[type="radio"] + label::before {
+    /* 가짜 라디오버튼 만들기 */
+    content: " ";
+    display: inline-block;
+    width: 19px;
+    height: 19px;
+    vertical-align: middle;
+    margin: -5px 7px 0 0;
+    background: url("../images/btn-radio-selected.svg");
+  }
+}
+
+%radio4 {
+  //radio
+  input[type="radio"] {
+    display: none; /* 실제 라디오버튼 없애기 */
+  }
+
+  /* input[type="radio"] + label::before {
+    //가짜 라디오버튼 만들기
+    content: " ";
+    display: inline-block;
+    width: 60px;
+    height: 32px;
+    vertical-align: middle;
+    margin: -5px 7px 0 0;
+    background-color: white;
+    display: none;
+  }
+  input[type="radio"]:checked + label::before {
+    //가짜 라디오버튼 체크했을 
+    background-position: 20px 0;
+    background-color: #30b9d3;
+  }*/
+
+  /////////////////////
+
+  .test1 + label {
+    border-top-left-radius: 2px;
+    border-bottom-left-radius: 2px;
+  }
+
+  .test2 + label {
+    border-top-right-radius: 2px;
+    border-bottom-right-radius: 2px;
+    margin-left: -3px;
+  }
+
+  input[type="radio"] {
+    & + label {
+      // outline: 2px solid red;
+      background: #fff;
+      border: 1px solid #c6cbd4;
+      color: black;
+      display: inline-block;
+      width: 60px;
+      height: 32px;
+      line-height: 32px;
+      // border-radius: 2px 0 0 2px;
+    }
+
+    &:checked + label {
+      // outline: 4px solid blue;
+      background: #30b9d3;
+      border: 1px solid #30b9d3;
+      color: #fff;
+      display: inline-block;
+      width: 60px;
+      height: 32px;
+      line-height: 32px;
+      // border-radius: 0 2px 2px 0;
+    }
+  }
+}
+
+%underline {
+  line-height: 30px;
+  border-bottom: 1px solid $color-lightgray;
+  padding-bottom: 13px;
+  font-size: 16px;
+}
+
+%select {
+  &::after {
+    content: "";
+    display: inline-block;
+    width: 24px;
+    height: 24px;
+    background-image: url("../images/btn-dropdown-arrow-normal.svg");
+    position: absolute;
+    top: 3px;
+    right: 4px;
+    z-index: 999;
+  }
+}
+
+%check {
+  //radio
+  input[type="checkbox"] {
+    display: none; /* 실제 라디오버튼 없애기 */
+  }
+  input[type="checkbox"] + label::before {
+    /* 가짜 라디오버튼 만들기 */
+    content: " ";
+    display: inline-block;
+    width: 20px;
+    height: 20px;
+    vertical-align: middle;
+    margin: -5px 7px 0 0;
+    background: url("../images/btn-checkbox-unchceked-out.svg");
+  }
+  input[type="checkbox"]:checked + label::before {
+    /* 가짜 라디오버튼 체크했을 때 */
+    background: url("../images/btn-checkbox-chceked.svg");
+    background-position: 20px 0;
+  }
+}
