account 전체 완료 커밋

--- a/css/scss/layout/_account05.scss
+++ b/css/scss/layout/_account05.scss
@@ -7,15 +7,14 @@
   justify-content: center;
 }
 .rem-a5 {
-  width: 80%;
-  height: 84%;
+  min-width: 1279px;
+  height: 840px;
 }
 //제목 쪽
 .title-a5 {
   background-color: $color-lightgray;
   border-bottom: 1px solid #e3e7ec;
-  width: 100%;
-  height: 10%;
+  height: 84px;
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -24,11 +23,12 @@
   h2 {
     margin-top: 5px;
     font-weight: 500;
+    font-size: 16px;
   }
   .x-a5 {
     margin-right: 40px;
-    width: 2.4%;
-    height: 50%;
+    width: 32px;
+    height: 34px;
     img {
       width: 100%;
     }
@@ -38,36 +38,29 @@
 .contents-a5 {
   background-color: #fff;
   border-radius: 0 0 2px 2px;
-  height: 90%;
   display: flex;
   align-items: center;
   .contents-center-a5 {
     width: 100%;
-    height: 85%;
-    border: 2px solid palevioletred;
+    height: 756px;
   }
 }
 //테이블 쪽
 .list-a5 {
   float: left;
-  border: 2px solid blue;
-  height: 100%;
-  width: 70%;
+  height: 600px;
+  width: 825px;
   padding-left: 30px;
   padding-right: 15px;
+  font-size: 13px;
   table {
-    border: 1px solid red;
     border-collapse: collapse;
-    height: 70%;
-    width: 100%;
+    height: 528px;
+    width: 780px;
     text-align: left;
   }
-  tbody {
-    height: 70%;
-  }
   tr {
-    height: 6.4%;
-    border-bottom: 1px solid $color-vote-table;
+    border-bottom: 1px solid rgba(198, 203, 212, 0.3);
   }
   th {
     color: #575757;
@@ -90,15 +83,17 @@
   font-size: 14px;
   font-weight: 500;
   padding-bottom: 12px;
-  width: 70%;
+  width: 825px;
   padding-left: 30px;
   padding-right: 15px;
   display: flex;
   justify-content: space-between;
+  margin-top: 66px;
   .top-up1 {
     color: #30b9d3;
     border-right: 1px solid $color-vote-table;
     padding-right: 12px;
+    padding-left: 10px;
   }
   .top-up2 {
     color: #9daab9;
@@ -115,57 +110,67 @@
 }
 //텍스트 송금작업명 쪽
 .text-a5 {
-  width: 30%;
-  height: 100%;
+  width: 455px;
   float: right;
-  border: 2px solid seagreen;
-  padding: 0 15px;
+  padding-left: 15px;
+  padding-right: 40px;
 }
 .text-box-a5 {
   background-color: $color-lightgray;
-  height: 100%;
-  border: 1px solid red;
   font-size: 13px;
-  padding-top: 8.8%;
-  padding-bottom: 5.2%;
+  padding-top: 51px;
+  padding-bottom: 30px;
   display: flex;
   justify-content: center;
   align-items: center;
+  width: 400px;
+  height: 580px;
   .text-boxin-a5 {
-    border: 2px solid slateblue;
-    height: 100%;
     position: relative;
+    height: 100%;
+  }
+  .bcx-a5 {
+    position: relative;
+    .bcx-in-a5 {
+      color: #30b9d3;
+      font-size: 13px;
+      position: absolute;
+      bottom: 12px;
+      right: 20px;
+    }
   }
   input {
-    width: 80%;
-    height: 6.9%;
-    padding: 0 8px;
+    width: 320px;
+    height: 40px;
+    padding: 0 12px;
+    font-size: 13px;
   }
   .box1,
   .box2,
   .box3,
   .box4 {
-    padding-bottom: 3.4%;
+    padding-bottom: 20px;
   }
   .box2,
   .box3,
   .box4 {
-    padding-top: 3.6%;
+    padding-top: 20px;
   }
   .other-a5 {
-    padding-top: 1.7%;
+    padding-top: 10px;
     color: #30b9d3;
   }
   .go-btn-a5 {
-    border: 2px solid gold;
     position: absolute;
     bottom: 0;
     right: 0;
     width: 100%;
     text-align: right;
     .gogo-a5 {
-      width: 19.5%;
-      height: 5.5%;
+      font-size: 14px;
+      line-height: 24px;
+      width: 78px;
+      height: 32px;
       background-color: #d8e0e7;
       color: #9daab9;
     }
